<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".MetricUnits.MetricUnitsActivity"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/body" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/age2"
                android:layout_width="160sp"
                android:layout_height="50dp"
                android:background="@drawable/back"
                android:padding="5sp"

                android:hint="@string/age"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/age"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/length2"
                android:layout_width="160sp"
                android:layout_height="50dp"
                android:padding="5sp"
                android:background="@drawable/back"
                android:hint="@string/length2"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/length"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/weight2"
                android:layout_width="160sp"
                android:layout_height="50dp"

                android:padding="5sp"
                android:background="@drawable/back"
                android:hint="@string/weight2"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/weight"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10sp"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/gender2"
                android:layout_width="160sp"
                android:layout_height="50dp"

                android:entries="@array/Gender1"
                android:background="@drawable/spinnerback"
                android:spinnerMode="dropdown"
                android:prompt="@string/select"

                android:minHeight="48dp"

                android:padding="10dp" />
            <ImageView
                android:layout_width="70dp"
                android:src="@drawable/womenorman"
                android:layout_height="60dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculate2"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:padding="10dp"
                android:text="@string/calculate"
                android:textSize="15sp" />

            <Button
                android:id="@+id/backhome2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:padding="10dp"
                android:text="@string/back"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>